added reference project for Lex Audio

--- a/aws_lex_exmaple/index.html
+++ b/aws_lex_exmaple/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <!-- For reference - https://chatbotslife.com/creating-a-chat-bot-with-angular-1b0d139f8378 -->
+<!-- For reference - https://github.com/crazyFlyingLion/cuteApp-->
 
 <head>
     <meta charset="UTF-8">
